# llamacpp-stress-test

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  README-results-viewer.md  README.md  README.zh-TW.md  bench-helper.sh  compose.yaml  example_config.conf  gpu_stress_test.sh  pyproject.toml  results-viewer.html  run_examples.sh  tune-batch.sh
results/: charts.min.css  environment.json  index.html  output.jsonl  results-viewer.html  results.html
src/: config.cpp  config.h  logger.cpp  logger.h  main.cpp  main_original.cpp  resource_monitor.cpp  resource_monitor.h
ui/: api.py  config.py  main.py
ui/static/: bulma.min.css  charts.min.css
ui/templates/: index.html  run_detail.html
